# CryoRemote

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/agnes/: manifest.json
docs/tools/: CryoRemote.html
scripts/: install_chimerax.ps1
src/: __init__.py  actions.py  cache.py  cmd.py  controller.py  cxc.py  location_memory.py  models.py  navigation.py  opening.py  preview.py  relion.py  session_ops.py  settings.py  sftp_fs.py  ssh_config.py  tool.py
src/ui/: assets.py  main_widget.py  pipeline_table_model.py  pipeline_view.py  tree_model.py
tests/: conftest.py  test_assets.py  test_cache.py  test_controller.py  test_cxc.py  test_integration.py  test_location_memory.py  test_navigation.py  test_relion.py  test_ssh_config.py  test_tool_open_selected.py
